--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+
+###########################################
+# Project-specific
+cuda-packages/*
+thesis-code/data/logs/*
+thesis-code/data/checkpoints/*
+###########################################
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
