trying to draw a picture

--- a/environment.yml
+++ b/environment.yml
@@ -57,6 +57,7 @@ dependencies:
   - python-picard
   - bitstring
   - bluepy
+  - pynput
 
   # scikit-cuda and dependencies
   - scikit-cuda>=0.5.2
